# s5

./: .travis.yml  Cargo.toml  LICENSE  README.md  bors.toml
problems/: Cargo.toml
problems/src/: chapter1.rs  constants.rs  conversions.rs  main.rs
s5/: Cargo.toml
s5/src/: display.rs  equations.rs  formulas.rs  lib.rs  solver_state.rs  variables.rs
solver/: Cargo.toml
solver/src/: constants.rs  display.rs  equations.rs  formulas.rs  lib.rs  solver_state.rs  state.rs  variables.rs
