[package]
name = "s5"
version = "0.1.0"
authors = ["Jerry Hardee <hardeejj9@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jayhardee9/s5"
description = "Simple equation solver written in Rust, built for solving some homework-style problems in orbital mechanics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
