[package]
name = "s5"
version = "0.1.0"
authors = ["Jerry Hardee <hardeejj9@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jayhardee9/s5"
description = "Simple equation solver written in Rust, built for solving some homework-style problems in orbital mechanics"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = [ "--no-deps" ]
